# ismycomputeron

./: .gitignore  CMakeLists.txt  README.md  main.cpp  wait_message.cpp  wait_message.h
